fix: fixed the issue of content overflowing outside body in DevTools view

--- a/src/components/filter-menu/filter-menu.scss
+++ b/src/components/filter-menu/filter-menu.scss
@@ -186,11 +186,13 @@
 
 .menu-invisible {
   right: -364px;
+  transform: scaleX(0);
   opacity: 0;
 }
 
 .menu-visible {
   right: 0;
+  transform: scaleX(1);
   opacity: 1;
 }
 
