--- a/src/main.scss
+++ b/src/main.scss
@@ -1,12 +1,5 @@
 @use './utils/utils.scss';
 
-main {
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-}
-
 h1 {
   text-align: center;
   color: utils.$defaultWhite;
